# QUEST

./: .gitignore  CODE_REVIEW.md  DOCUMENTATION_INDEX.md  END_TO_END_GUIDE.md  FIXES_APPLIED.md  FULL_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  VERIFICATION_REPORT.md  all_commits.json  all_commits.txt  all_commits_detailed.txt  import_commits.sh  pyproject.toml  start_runner.sh  stop_runner.sh  streamlit_app.py
artifacts/: attempt_stats.csv  run_summary_stats.csv  run_vs_baseline.csv
configs/: default.yaml
docs/: AGENT_PROMPTS_AND_FLOW.md  DOCUMENTATION_INDEX.md  END_TO_END_EXAMPLE.md  GIT_COMMANDS.md  IMPORT_COMMITS_GUIDE.md  ITERATE_PIPELINE_TEST.md  LLM_SUPERVISOR_IMPLEMENTATION.md  MUTATION_TESTING_IMPLEMENTATION.md  Project.md  SETUP_SUMMARY.md  TEAM_SETUP_GUIDE.md  TEST_RESULTS.md  brief_overview.md
gitrepo/swebench_docker/: context_manager.py  evaluate_instance.py  run_docker.py
scripts/: analyze_attempt_stats.py  analyze_run_stats.py  collect_run_stats.py  repo_distribution.py  run_bulk_manual.sh  run_bulk_python.py  run_bulk_simple.sh  run_dataset_orchestrator.py  run_django_batch.py  run_matrix.py  summarize_runs.py
src/: __init__.py
src/agents/: base.py  enhancer.py  generator.py  supervisor.py
src/bus/: inproc.py
src/context/: miner.py
src/contracts/: messages.py
src/core/: config.py  sandbox_client.py  schema.py  storage.py  types.py
src/llm/: enhancer.py  generator.py  (+2 more)
tests/: __init__.py  conftest.py  test_context_miner.py  test_llm_provider.py  test_router.py  test_sandbox_client.py  test_schema.py
(+310 files in other folders)
